--- a/extensions/bash/app.html
+++ b/extensions/bash/app.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "static/css/main.1.css"/>
     <link rel="stylesheet" href = "static/css/checkBox.1.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/xterm@4.11.0/css/xterm.css"/>
     <style>{style}</style>
   </head>
-  <body class="scroll_style" ondragstart="return false;" ondrop="return false;">
-    <p>hello world</p>
+  <body class="scroll_style">
+    <div id="terminal"></div>
   </body>
+  <!-- xterm -->
+  <script src="https://unpkg.com/xterm@4.11.0/lib/xterm.js"></script>
+  <script src="https://unpkg.com/xterm-addon-fit@0.5.0/lib/xterm-addon-fit.js"></script>
+  <script src="https://unpkg.com/xterm-addon-web-links@0.4.0/lib/xterm-addon-web-links.js"></script>
+  <script src="https://unpkg.com/xterm-addon-search@0.8.0/lib/xterm-addon-search.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js"></script>
+
+  <!-- other -->
   <script type="text/javascript" src="static/js/main.1.js"></script>
   <script type="text/javascript">{script}</script>
 </html>
