распределение сокетов по пользовательским приложениям
 - распределение сокетов по пользовательским приложениям
 - создание приложений
 - удаление приложений

--- a/extensions/bash/app.html
+++ b/extensions/bash/app.html
@@ -20,5 +20,5 @@
 
   <!-- other -->
   <script type="text/javascript" src="static/js/main.1.js"></script>
-  <script type="text/javascript">{script}</script>
+  {script}
 </html>
