--- a/extensions/bash/welcome_app.html
+++ b/extensions/bash/welcome_app.html
@@ -1,5 +1,5 @@
 <p style="position: absolute; top: -5px; left: 5px;">Thread name:</p>
-<input id="app_name_input" class="input_style dialog_input" style="position: absolute; left: 10px; top: 25px; right: 10px; max-width: 260px;" type=text placeholder="name" onkeypress="">
+<input id="{namespace}name" class="input_style dialog_input" style="position: absolute; left: 10px; top: 25px; right: 10px; max-width: 260px;" type=text placeholder="name">
 
 <p style="position: absolute; top: 60px; left: 5px;">Start path:</p>
-<input id="app_name_input" class="input_style dialog_input" style="position: absolute; left: 10px; top: 90px; right: 10px; max-width: 260px;" type=text placeholder="path" onkeypress="">
+<input id="{namespace}path" class="input_style dialog_input" style="position: absolute; left: 10px; top: 90px; right: 10px; max-width: 260px;" type=text placeholder="path" value={defaultPath}>
