--- a/extensions/wget/app.html
+++ b/extensions/wget/app.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href = "static/css/checkBox.1.css"/>
     <style>{style}</style>
   </head>
-  <body class="scroll_style">
-    <h1>TEST APP</h1>
+  <body>
+    <p id="file_url"></p>
+    <p id="file_name"></p>
+    <p id="file_size"></p>
+    <p id="file_progress"></p>
+    <div class="file_progess_bg">
+      <div class="file_progess"></div>
+    </div>
   </body>
-  <!-- other -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js"></script>
   <script type="text/javascript" src="static/js/main.1.js"></script>
   {script}
 </html>
