--- a/entry.html
+++ b/entry.html
@@ -3,6 +3,6 @@
     <link rel="stylesheet" href = "static/css/main.1.css"/>
   </head>
   <body>
-    <h1 align="center">ДИРЕКТОР ИНТЕРНЕТА</h1>
+    <h1 align="center">100LAR-WEB-DISK</h1>
   </body>
 </html>
