перенос зависимостей на сервер

--- a/extensions/wget/app.html
+++ b/extensions/wget/app.html
@@ -16,7 +16,7 @@
       <div class="file_progess"></div>
     </div>
   </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js"></script>
+  <script src="static/js/libs/socketio.js"></script>
   <script type="text/javascript" src="static/js/main.1.js"></script>
   {script}
 </html>
