--- a/extensions/bash/app.html
+++ b/extensions/bash/app.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href = "static/css/libs/xterm.css"/>
     <style>{style}</style>
   </head>
-  <body class="scroll_style">
+  <body class="scroll_style black_blank">
+    <div class="terminal_info">
+      <p id="ping">ping: ...</p>
+    </div>
     <div id="terminal"></div>
   </body>
   <!-- xterm -->
